Revert "Unwanted change"
This reverts commit 8a26b99aa9e4c4bd3e9f18702559373b78c4d8f2.

--- a/pilots.html
+++ b/pilots.html
@@ -17,7 +17,12 @@
 <h1>Pilot's Alphabet</h1>
 <ul id="pilot">
 <!-- ALPHABET START -->
-  <li>Alpha</li>  
+  <li>Alpha</li>
+  <li>Bravo</li>
+  <li>Charlie</li>
+  <li>Delta</li>
+  <li>Echo</li>
+  <li>Foxtrot</li>
 <!-- ALPHABET END -->
 </ul>
 </div>
